[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4"
actix-web-actors = "4.2.0"
ahash = { version = "0.8.3", features = ["serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
